ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /yb-tserver
          backend:
            serviceName: yb-db-service
            servicePort: 9000
        - path: /yb-master
          backend:
            serviceName: yb-master-ui
            servicePort: 7000
